第十一次提交，注册到环信

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.LoginActivity"></activity>
+        <activity android:name=".ui.RegisterActivity"/>
 
         <!-- 设置环信应用的AppKey -->
         <meta-data android:name="EASEMOB_APPKEY"  android:value="1143170522178895#qqdemo" />
