第十三次提交，集成BottomBar底部导航栏

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+/*底部导航栏*/
+    compile 'com.roughike:bottom-bar:2.0.2'
 }
