--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 /*底部导航栏*/
     compile 'com.roughike:bottom-bar:2.0.2'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'org.greenrobot:greendao:3.2.0'
+    compile 'com.android.support:cardview-v7:25.3.1'
+
 }
